--- a/todoapp/app/src/main/res/layout/gesture_interface_frag.xml
+++ b/todoapp/app/src/main/res/layout/gesture_interface_frag.xml
@@ -24,7 +24,7 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        android:id="@+id/statistics"
+        android:id="@+id/text_gesture"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Medium Text"
