refactor(design) : Tirar icones
Retirada de icones desnecessários e mudança de algumas imagens

#noIssue

--- a/todoapp/app/src/main/res/layout/nav_header.xml
+++ b/todoapp/app/src/main/res/layout/nav_header.xml
@@ -27,7 +27,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/logo" />
+        android:src="@drawable/baseline_music_video_black_48" />
 
     <TextView
         android:layout_width="wrap_content"
