--- a/todoapp/app/src/main/res/layout/tasks_frag.xml
+++ b/todoapp/app/src/main/res/layout/tasks_frag.xml
@@ -61,14 +61,14 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_assignment_turned_in_24dp" />
+                android:src="@drawable/baseline_music_video_black_48" />
 
             <TextView
                 android:id="@+id/noTasksMain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/no_tasks_all"
+                android:text="@string/app_description"
                 android:layout_marginBottom="@dimen/list_item_padding" />
 
             <TextView
