--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,17 +15,6 @@ tools:context="com.codility.speechtext.MainActivity">
     android:textColor="@color/colorPrimaryDark"
     android:textSize="40sp" />
 
-<android.support.v7.widget.AppCompatTextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:layout_below="@+id/ll"
-    android:padding="10dp"
-    android:text="@string/app_info"
-    android:textColor="@color/colorAccent"
-    android:textSize="14sp" />
-
 <android.support.v7.widget.LinearLayoutCompat
     android:id="@+id/ll"
     android:layout_width="match_parent"
@@ -33,20 +22,33 @@ tools:context="com.codility.speechtext.MainActivity">
     android:layout_below="@+id/tvHeader"
     android:background="@color/colorPrimary" />
 
-<android.support.v7.widget.AppCompatEditText
-    android:id="@+id/editText"
+<android.support.v7.widget.AppCompatTextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_centerVertical="true"
-    android:layout_margin="10dp"
-    android:hint="@string/text_hint"
-    android:maxLines="5"
-    android:textColorHint="@color/colorAccent"
-    android:padding="20dp"
-    android:editable="false"
-    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-    android:textColor="@color/colorPrimaryDark"
-    tools:ignore="Deprecated" />
+    android:layout_below="@+id/ll"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentLeft="true"
+    android:gravity="center"
+    android:padding="10dp"
+    android:text="@string/app_info"
+    android:textColor="@color/colorAccent"
+    android:textSize="14sp" />
+
+    <android.support.v7.widget.AppCompatEditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_margin="10dp"
+        android:editable="false"
+        android:hint="@string/text_hint"
+        android:maxLines="5"
+        android:padding="20dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:textColor="@color/colorPrimaryDark"
+        android:textColorHint="@color/colorAccent"
+        android:textSize="16sp"
+        tools:ignore="Deprecated" />
 
 <android.support.v7.widget.AppCompatTextView
     android:layout_width="match_parent"
