--- a/todoapp/app/src/main/res/layout/running_interface_frag.xml
+++ b/todoapp/app/src/main/res/layout/running_interface_frag.xml
@@ -24,10 +24,15 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        android:id="@+id/statistics"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:id="@+id/txtCurrentSpeed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="000.0 miles/hour"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <CheckBox android:id="@+id/chkMetricUnits"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Use metric units?"/>
 
 </LinearLayout>
