--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,74 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="com.codility.speechtext.MainActivity">
-
-<android.support.v7.widget.AppCompatTextView
-    android:id="@+id/tvHeader"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:padding="10dp"
-    android:text="@string/applicant_name"
-    android:textColor="@color/colorPrimaryDark"
-    android:textSize="40sp" />
+    android:layout_height="match_parent"
+    tools:context="com.codility.speechtext.MainActivity">
 
-<android.support.v7.widget.LinearLayoutCompat
-    android:id="@+id/ll"
-    android:layout_width="match_parent"
-    android:layout_height="2dp"
-    android:layout_below="@+id/tvHeader"
-    android:background="@color/colorPrimary" />
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/tvHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/applicant_name"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="30sp" />
 
-<android.support.v7.widget.AppCompatTextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_below="@+id/ll"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentLeft="true"
-    android:gravity="center"
-    android:padding="10dp"
-    android:text="@string/app_info"
-    android:textColor="@color/colorAccent"
-    android:textSize="14sp" />
+    <android.support.v7.widget.LinearLayoutCompat
+        android:id="@+id/ll"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_below="@+id/tvHeader"
+        android:background="@color/colorPrimary" />
+
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/subtitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ll"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/app_info"
+        android:textColor="@color/colorAccent"
+        android:textSize="14sp" />
+
+    <ImageView
+        android:id="@+id/capa_musica"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/subtitle"
+        android:layout_margin="16dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@android:drawable/ic_menu_gallery"
+        tools:ignore="UnknownId" />
+
+    <TextView
+        android:id="@+id/nome_musica"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/capa_musica"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-16dp"
+        android:text="TextView" />
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_margin="10dp"
         android:editable="false"
         android:hint="@string/text_hint"
-        android:maxLines="5"
+        android:maxLines="2"
         android:padding="20dp"
+        android:layout_centerVertical="true"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:textColor="@color/colorPrimaryDark"
         android:textColorHint="@color/colorAccent"
         android:textSize="16sp"
         tools:ignore="Deprecated" />
 
-<android.support.v7.widget.AppCompatTextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_above="@+id/btSpeech"
-    android:layout_alignLeft="@+id/editText"
-    android:layout_alignStart="@+id/editText"
-    android:gravity="center"
-    android:padding="5dp"
-    android:text="@string/btn_info"
-    android:textColor="@color/colorAccent"
-    android:textSize="12sp" />
+    <android.support.v7.widget.AppCompatTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btSpeech"
+        android:layout_alignStart="@+id/editText"
+        android:layout_alignLeft="@+id/editText"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="@string/btn_info"
+        android:textColor="@color/colorAccent"
+        android:textSize="12sp" />
 
-<android.support.v7.widget.AppCompatImageButton
-    android:id="@+id/btSpeech"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_centerHorizontal="true"
-    android:layout_marginBottom="20dp"
-    android:background="@drawable/btn_background" />
+    <android.support.v7.widget.AppCompatImageButton
+        android:id="@+id/btSpeech"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/btn_background" />
+
 
 </RelativeLayout>
