--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,12 +38,13 @@
 
     <ImageView
         android:id="@+id/capa_musica"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_below="@id/subtitle"
-        android:layout_margin="16dp"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="16dp"
+        android:layout_marginTop="16dp"
         app:srcCompat="@android:drawable/ic_menu_gallery"
         tools:ignore="UnknownId" />
 
@@ -53,31 +54,15 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/capa_musica"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="-16dp"
-        android:text="TextView" />
-
-    <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:editable="false"
-        android:hint="@string/text_hint"
-        android:maxLines="2"
-        android:padding="20dp"
-        android:layout_centerVertical="true"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:textColor="@color/colorPrimaryDark"
-        android:textColorHint="@color/colorAccent"
-        android:textSize="16sp"
-        tools:ignore="Deprecated" />
+        android:layout_marginTop="-6dp"
+        android:gravity="center"
+        android:textSize="16sp" />
 
     <android.support.v7.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/btSpeech"
-        android:layout_alignStart="@+id/editText"
-        android:layout_alignLeft="@+id/editText"
+        android:layout_below="@+id/nome_musica"
         android:gravity="center"
         android:padding="5dp"
         android:text="@string/btn_info"
