--- a/todoapp/app/src/main/res/layout/gesture_interface_frag.xml
+++ b/todoapp/app/src/main/res/layout/gesture_interface_frag.xml
@@ -27,17 +27,29 @@
         android:id="@+id/imagem_gesto"
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
-        android:layout_margin="@dimen/activity_vertical_margin"
+        android:layout_margin="6dp"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_statistics_100dp" />
 
     <TextView
-        android:id="@+id/text_gesture"
+        android:id="@+id/text_musica"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:textAlignment="center"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/imagem_gesto"
+        android:text="Medium Text"
+        android:textColor="@android:color/white"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/text_artista"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:layout_centerInParent="true"
-        android:layout_below="@+id/imagem_gesto"
+        android:layout_below="@+id/text_musica"
         android:text="Medium Text"
         android:textColor="@android:color/white"
         android:textAppearance="?android:attr/textAppearanceMedium" />
